Add ability to create books

--- a/app/views/home/land.html.erb
+++ b/app/views/home/land.html.erb
@@ -1,7 +1,7 @@
 <div id="land">
   <div class="vcenter">
     <h1>Put your thoughts in words</h1>
-    <%= link_to "Get Started", "#",
+    <%= link_to "Get Started", books_path,
     class: "btn btn-outline" %>
   </div>
 </div>
