--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+<%= render 'common/header' unless landing_page? %>
+<div class="<%= 'container' unless landing_page? %>">
+  <%= yield %>
+</div>
 
 </body>
 </html>
