--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer>
-  <nav>
+<footer class="container">
+  <nav class="container-fluid">
     Choose Language:
     <%= link_to "en", translate_path(locale: :en) %>
     |
