--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class="container">
-  <nav class="container-fluid">
+<footer>
+  <nav class="navbar navbar-fixed-bottom">
     Choose Language:
     <%= link_to "en", translate_path(locale: :en) %>
     |
