--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,11 @@
               target: "#delete-confirmation-modal"} %>
 <%= link_to "Edit", edit_book_path(@book), class: "btn btn-primary pull-right"%>
 <h1><%= @book.title %></h1>
-
+<ul id="chapters-list">
+  <%= render @chapters %>
+</ul>
+<%= link_to "+ Add New Chapter", "#", id: "new-chapter-form-trigger" %>
+<%= render partial: 'chapters/form', locals: {chapter: @new_chapter} %>
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="delete-confirmation-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
