List sections under chapter name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,6 @@
         "bootstrap-sprockets",
         "bootstrap",
         "common",
-        "home";
+        "home",
+        "books",
+        "font-awesome";
