--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -7,6 +7,14 @@
       a.chapter-title {
         margin-right: 2.5em;
         display: block;
+
+        .fa-caret-right {
+          display: inline-block;
+        }
+
+        .fa-caret-down {
+          display: none;
+        }
       }
 
       a.chapter-edit, a.chapter-delete{
@@ -20,29 +28,34 @@
           visibility: visible;
         }
       }
+      .sections {
+        margin-left: 1em;
+        display: none;
 
-    }
-
-    .sections {
-      margin-left: 1em;
-
-      .section {
-        a.section-title {
-          margin-right: 2.5em;
-          display: block;
-        }
-
-        a.section-edit, a.section-delete{
-          float: right;
-          margin-left: 0.5em;
-          visibility: hidden;
-        }
-        &:hover{
-          a.section-edit, a.section-delete{
-            visibility: visible;
+        .section {
+          a.section-title {
+            margin-right: 2.5em;
+            display: block;
           }
         }
       }
+
+      &.expand {
+        a.chapter-title {
+          .fa-caret-right {
+            display: none;
+          }
+
+          .fa-caret-down {
+            display: inline-block;
+          }
+        }
+        .sections {
+          display: block;
+        }
+      }
+
     }
+
   }
 }
