--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,6 +8,9 @@
                   target: "#delete-confirmation-modal"} %>
     <%= link_to "Edit", edit_book_path(@book), class: "btn btn-primary pull-right"%>
     <h1><%= @book.title %></h1>
+    <div id="section-content">
+      
+    </div>
   </div>
   <div id="sidebar" class="col-md-4 col-md-pull-8">
     <div id="chapters-list">
