Add ability to sort chapters in a book

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "theme",
         "bootstrap-sprockets",
         "bootstrap",
+        "jquery-ui",
         "common",
         "home",
         "books",
