--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<section id="book" class="row">
+<section id="book" class="row" data-book-id="<%= @book.id %>">
   <div id="book-content" class="col-md-8 col-md-push-4">
     <%= link_to "Delete Book",
                 "#",
@@ -9,7 +9,7 @@
     <%= link_to "Edit", edit_book_path(@book), class: "btn btn-primary pull-right"%>
     <h1><%= @book.title %></h1>
     <div id="section-content">
-      
+
     </div>
   </div>
   <div id="sidebar" class="col-md-4 col-md-pull-8">
